# bitwarden-cli

./: LICENSE  README  README.txt  fossil.marks  git.marks
.circleci/: config.yml
docs/: Makefile  make.bat
docs/source/: commands.rst  conf.py  crypto.rst  index.rst  installation.rst  internals.rst  security.rst  troubleshooting.rst
python/: Makefile  Pipfile  README.md  pylintrc  requirements-tests-py3.txt  requirements.txt  setup.py
python/bitwarden/: agent.py  client.py  crypto.py  db.py  main.py  slab.py
python/tests/: test_bitwarden.py
rust/: Cargo.toml  Makefile
rust/src/: cli.yaml  crypto.rs  lib.rs  main.rs
schema/: bitwarden.sql
tools/: bitwarden.sqlite  fsl2git.sh  git2fsl.sh  gitpush.sh  lb.sh
