[package]
name = "bitwarden"
version = "0.1.0"
authors = ["Birl.org"]
publish = false

[dependencies]
daemonize = "^0.3"
rust-crypto = "^0.2"
rand = "^0.4"
rustc-serialize = "^0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.8.5"
rpassword = "2.0.0"
#rouille = { git= "https://github.com/birlorg/rouille"}
tiny_http = "0.8.0"
secstr = "0.3.0"
openssl-sys = "0.9.40"
openssl = "^0.10"
hmac = "0.7.0"
uuid = { version = "^0.6", features = ["v5"]}
clap = {version = "^2.31", features = ["yaml"]}
